cmake_minimum_required(VERSION 3.10)
project(curs_work)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(libs/googletest-master)
include_directories(libs/googletest-master/googletest/include)
include_directories(Headers)
include_directories(Sources)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)

include_directories(Headers)
include_directories(Sources)
add_executable(curs_work main.cpp Sources/functions.cpp Headers/functions.h Sources/Matrix.cpp Headers/Matrix.h Sources/read_functions.cpp Headers/read_functions.h Headers/time_count.h)
add_executable(tests tests.cpp Sources/functions.cpp Headers/functions.h Sources/Matrix.cpp Headers/Matrix.h Sources/read_functions.cpp Headers/read_functions.h Headers/time_count.h)
target_link_libraries(tests gtest Threads::Threads ${OpenCV_LIBS} gtest_main)
target_link_libraries(curs_work Threads::Threads ${OpenCV_LIBS})